<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/name3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/size2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/name4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/my_id_size" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/teemo_poi_top_image_cover_new" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_mei_tuan_price1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/id_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/string_name"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:hint="@string/name6"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="7dp"
                    android:textSize="@dimen/my_id_size" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/id_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="4dp"
                android:src="@drawable/ic_clear_disabled" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_mei_tuan_price1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="8dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:digits="@string/string_password"
                android:background="@null"
                android:hint="@string/name2"
                android:inputType="textPassword"
                android:paddingLeft="7dp"
                android:textSize="@dimen/my_id_size" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/password_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="4dp"
                android:src="@drawable/ic_clear_disabled" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/common_mei_tuan_price1" />

        <Button
            android:id="@+id/login_brn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/lodin_brn"
            android:text="登录"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="找回密码"
                android:textColor="@color/tab_bar_text_on" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="手机号快捷登录"
                android:textColor="@color/tab_bar_text_on" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="27dp"
        android:paddingTop="45dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_oauth_sina" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_oauth_baidu" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_oauth_tencent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/login_other"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical">

        <View
            android:layout_width="20dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/common_mei_tuan_price1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="使用第三方账号登录" />

        <View
            android:layout_width="20dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/common_mei_tuan_price1" />
    </LinearLayout>
</RelativeLayout>
